--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -1,29 +1,34 @@
 {
   "name": "serverless-todo-app",
   "version": "1.0.0",
-  "type": "module",
   "description": "Serverless TODO image app",
-  "main": "handler.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Ivan Mushketyk",
-  "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.214.0",
-    "@aws-sdk/client-s3": "^3.213.0",
-    "@aws-sdk/lib-dynamodb": "^3.214.0",
-    "@aws-sdk/s3-request-presigner": "^3.213.0",
-    "@middy/core": "^3.6.2",
-    "@middy/http-cors": "^3.6.2",
-    "@middy/http-error-handler": "^3.6.2",
-    "aws-xray-sdk-core": "^3.4.0",
-    "axios": "^1.1.3",
-    "http-errors": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "serverless-iam-roles-per-function": "^3.2.0",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
-  }
+      "@types/axios": "^0.14.0",
+      "@types/http-errors": "^2.0.4",
+      "aws-xray-sdk": "^3.10.0",
+      "axios": "^1.7.7",
+      "http-errors": "^2.0.0",
+      "jsonwebtoken": "^8.5.1",
+      "middy": "^0.36.0",
+      "source-map-support": "^0.5.21",
+      "uuid": "^9.0.1",
+      "winston": "^3.14.2"
+  },
+  "devDependencies": {
+      "@types/aws-lambda": "^8.10.145",
+      "@types/jsonwebtoken": "^8.5.9",
+      "@types/node": "^18.19.50",
+      "aws-sdk": "^2.1691.0",
+      "serverless-aws-documentation": "^1.1.0",
+      "serverless-iam-roles-per-function": "^3.2.0",
+      "serverless-plugin-canary-deployments": "^0.8.0",
+      "serverless-plugin-tracing": "^2.0.0",
+      "serverless-reqvalidator-plugin": "^2.0.0",
+      "serverless-webpack": "^5.14.2",
+      "ts-loader": "^9.5.1",
+      "typescript": "^5.6.2",
+      "webpack": "^5.94.0"
+  },
+  "author": "Ivan Mushketyk",
+  "license": "MIT"
 }
