--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=...
-REACT_APP_AUTH0_CLIENT_ID=...
-REACT_APP_API_ENDPOINT=...
+REACT_APP_AUTH0_DOMAIN=dev-vygfvn2lt8lr22rr.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=Tbi8M5aybVZgZlMM37ojYA1jASMovWkd
+REACT_APP_API_ENDPOINT=https://9yt11x8n0a.execute-api.us-east-1.amazonaws.com/dev
